# competehub

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README-GIT.md  README.md  chat515作业分工提示.md  chat分工提示——软工515作业参考  docker-compose.yml  justfile  mise.toml  mkdocs.yml  skills-lock.json
apps/api/: README.md  pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 13eb10903bd7_add_immutable_competition_revisions.py  4a17c3d9e507_add_immutable_competition_revisions.py  4d8b6e1a3f20_canonicalize_subscription_node_types.py  61f2c8e4a9bd_add_verification_delivery_outbox.py  7f3c2a91d8e4_add_student_following_reminder_integrity.py  8b4d2f7a1c90_add_competition_revision_lifecycle_evidence.py  a2c4e6f8b0d1_add_retained_message_snapshots.py  a64f1b9d2c7e_add_outbound_click_analytics.py  be7dfc45f976_add_recommendation_rule_set_governance.py  be7dfc45f976_baseline_recommendation_governance.py  (+1 more)
apps/api/src/competehub_api/: __init__.py  (+9 more)
apps/api/tests/: conftest.py  test_admin_competitions.py  test_auth_profile.py  test_calendar.py  test_competition_revisions.py  test_development_demo_seed.py  test_e2e_seed.py  test_email_sender.py  test_engagement_service.py  test_health.py  test_issue37_postgresql_concurrency.py  test_issue38_postgresql_concurrency.py  test_issue39_postgresql_concurrency.py  test_issue40_postgresql_concurrency.py  test_messages_api.py  test_migrations.py  test_public_competitions.py  test_recommendation_rule_sets.py  test_recommendations.py  test_reminder_delivery.py  test_tasks.py
(+370 files in other folders)
