[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gzh", email = "elecdot5@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
